[Style][Refine] Remove fixed height specification for text in `Caption` component (I'm okay with page jump for now)

--- a/src/components/shared/Caption.css
+++ b/src/components/shared/Caption.css
@@ -4,7 +4,7 @@
  *
  * Author   : Tomiko
  * Created  : Jul 09, 2020
- * Updated  : Aug 12, 2020
+ * Updated  : Aug 13, 2020
  */
 
 div.IconContainer {
@@ -13,11 +13,6 @@ div.IconContainer {
 }
 
 p.CaptionText {
-  /** Specify a height to make sure variable content
-   * does not cause layout size change (i.e., page jump).
-   */
-  height: 70px;
-  max-height: 70px;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   margin-right: 5px;
